// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`検算 > 指摘の文面を丸ごと固定する > ショート 1`] = `
[
  "fatal|4|4 か月目に資金がショートします（残高 -200,000 円）。この月までに、入金の前倒し・支払の繰延べ・追加調達のいずれかを決めておく必要があります。",
  "warn|-|経常収支がマイナスの月が 12 か月あります。本業で資金が出ていく状態が続いており、借入で埋めても残高が戻らないため返済で先細ります。",
  "warn|-|期末残高が平均月次経常支出の -8.7 か月分しかありません。不測の入金遅延で即座に資金が詰まる水準です。",
  "info|-|前月繰越はこの表が前月の翌月繰越から自動で引き継ぎます（手で転記しません）。掛け取引がある場合は、売上の月ではなく入金の月に金額を入れてください。",
]
`;

exports[`検算 > 指摘の文面を丸ごと固定する > 借入で穴埋め 1`] = `
[
  "warn|-|経常収支がマイナスの月が 12 か月あります。本業で資金が出ていく状態が続いており、借入で埋めても残高が戻らないため返済で先細ります。",
  "warn|-|年間の経常収支がマイナスのまま借入で穴を埋めています。返済原資は経常収支から出るため、調達額よりも先に経常収支を黒字にする道筋が要ります。",
  "warn|1|期首残高が 0 以下です。実際の現預金残高を入れないと、以降の月の残高がすべてずれます。",
  "info|-|前月繰越はこの表が前月の翌月繰越から自動で引き継ぎます（手で転記しません）。掛け取引がある場合は、売上の月ではなく入金の月に金額を入れてください。",
]
`;

exports[`検算 > 指摘の文面を丸ごと固定する > 健全 1`] = `
[
  "info|-|前月繰越はこの表が前月の翌月繰越から自動で引き継ぎます（手で転記しません）。掛け取引がある場合は、売上の月ではなく入金の月に金額を入れてください。",
]
`;

exports[`項目の定義 > 項目一覧をスナップショットで固定する 1`] = `
[
  "operating-in|sales|売上入金",
  "operating-in|otherIn|その他収入",
  "operating-out|purchase|仕入・外注費",
  "operating-out|labor|人件費",
  "operating-out|expense|その他経費",
  "finance-in|borrow|借入金入金",
  "finance-out|repay|借入金返済",
]
`;
